--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html class="windows desktop portrait"><head><link rel=import href=./model.html><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta http-equiv=Cache-Control content="no-cache, no-store, must-revalidate"><meta http-equiv=Pragma content=no-cache><meta http-equiv=Expires content=0><title>jackiechenlovely</title><script>var is_mobi = navigator.userAgent.toLowerCase().match(/(ipod|ipad|iphone|android|coolpad|mmp|smartphone|midp|wap|xoom|symbian|j2me|blackberry|wince)/i) != null;
       if (is_mobi) {
-
+         window.location.href = 'jackiechenlovely.site'
       }</script><style>html, body, #app,.app{ height: 100%; margin: 0px; padding: 0px; }
       .d2-home { background-color: #303133; height: 100%; display: flex; flex-direction: column; }
       .d2-home__main { user-select: none; width: 100%; flex-grow: 1; display: flex; justify-content: center; align-items: center; flex-direction: column; }
